--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "fabric": "^5.3.0",
     "framer-motion": "^11.0.8",
     "input-otp": "^1.4.2",
+    "jszip": "^3.10.1",
     "lucide-react": "^0.462.0",
     "next-themes": "^0.3.0",
     "pdf-lib": "^1.17.1",
